[gd_scene load_steps=8 format=3 uid="uid://c355q87xv6ny0"]

[ext_resource type="Script" uid="uid://8qt40d7ntfb3" path="res://scripts/choose_car.gd" id="1_3vq02"]
[ext_resource type="Texture2D" uid="uid://5sacm1iiq1vd" path="res://assets/GUI/mainmenu-bg.jpeg" id="1_8dg5h"]
[ext_resource type="FontFile" uid="uid://1pkpgccsudfv" path="res://assets/GUI/Font/Orbitron-VariableFont_wght.ttf" id="1_xbxxd"]
[ext_resource type="Texture2D" uid="uid://1qnm7flx08ky" path="res://assets/sedan.png" id="3_de8yw"]
[ext_resource type="Theme" uid="uid://dtqc0nm46rt34" path="res://assets/GUI/defautl2.tres" id="3_rsygn"]
[ext_resource type="Texture2D" uid="uid://d3wk8jxwq8s3j" path="res://assets/hatchback.png" id="4_3vq02"]
[ext_resource type="AudioStream" uid="uid://dfq2kp7k33f3" path="res://assets/sounds/game-background-choose-car.mp3" id="7_crpu2"]

[node name="ChooseCar" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vq02")

[node name="Background" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 801.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/Background"]
layout_mode = 0
offset_right = 640.0
offset_bottom = 803.0
texture = ExtResource("1_8dg5h")
expand_mode = 1

[node name="Label2" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -291.0
offset_bottom = -227.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0.968562, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.449219, 0.449219, 0.449219, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 5
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("1_xbxxd")
theme_override_font_sizes/font_size = 50
text = "Select Your Car"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 38.0
offset_top = 268.0
offset_right = 617.0
offset_bottom = 492.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_de8yw")
expand_mode = 1

[node name="SedanButton" type="Button" parent="CanvasLayer/Control/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbxxd")
theme_override_font_sizes/font_size = 35
text = "Sedan"

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("4_3vq02")
expand_mode = 1

[node name="HatchbackButton" type="Button" parent="CanvasLayer/Control/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xbxxd")
theme_override_font_sizes/font_size = 35
text = "Hatchback"

[node name="BackButton" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 178.0
offset_top = 573.0
offset_right = 478.0
offset_bottom = 658.0
theme = ExtResource("3_rsygn")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_xbxxd")
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -195.0
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_xbxxd")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameBackground" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_crpu2")
autoplay = true
